--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
-<body>
+<body style="background-color: black;">
 {% include 'header.html' %}
-<div class="row justify-content-center" style="margin: 0 auto; background-color: black;">
+<div class="row justify-content-center" style="margin: 0 auto;">
     <div class="container" >
         <br>
         {% block content %}
