--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,7 +6,7 @@
         <form action="{% url 'login' %}" method="POST">
             {% csrf_token %}
             <input type="text" name="name">
-            <input type="text" name="password">
+            <input type="password" name="password">
             <input type="submit" value="로그인">
         </form>
     </div>
