--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -6,8 +6,8 @@
         <form action="{% url 'signup' %}" method="POST">
             {% csrf_token %}
             <input type="text" name="name">
-            <input type="text" name="password1">
-            <input type="text" name="password2">
+            <input type="password" name="password1">
+            <input type="password" name="password2">
             <input type="submit" value="회원가입">
         </form>
     </div>
