--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
   </a>
     <div>
         {% if user.is_active %}
-            <a href="" style="color: white; margin-right: 10px;">{{ user.username }}</a>
+            <a href="{% url 'rps_list' %}" style="color: white; margin-right: 10px;">{{ user.username }}</a>
             <a href="{% url 'logout' %}" style="color: white; margin-right: 10px;">Logout</a>
         {% else %}
             <a href="{% url 'login' %}" style="color: white; margin-right: 10px;">Login</a>
